191の分野の歴史を追加

--- a/16-宗教/16／19-宗教/19-キリスト教/191-教義．キリスト教神学/191-教義．キリスト教神学.md
+++ b/16-宗教/16／19-宗教/19-キリスト教/191-教義．キリスト教神学/191-教義．キリスト教神学.md
@@ -14,3 +14,152 @@
 
 ## 分野の歴史
 
+<!-- 
+アウトライン
+- 1. 教義と神学の輪郭：信仰告白・礼拝・論争のあいだ
+  - 神学は「祈りと礼拝の言語」を整理する営みであること（レグラ・フィデイ／信仰の規範）
+  - 教義形成を駆動した三要因：聖書解釈／異端論争／教会の公的決定（公会議・信条）
+  - 「教義」「神学」「霊性」「倫理」が相互に影響し合う構図（教義が生活実践を形づくり、実践が問いを生む）
+- 2. 使徒時代から護教家へ：キリスト告白の多様性と統一への試み（1〜2世紀）
+  - 使徒信条へと連なる原型（洗礼の問い答え）と、正典・礼拝の整備
+  - グノーシス主義、マルキオン、モンタノス運動などが投げかけた「創造」「救い」「啓示」の論点
+  - イレナイオス『異端反駁』、テルトゥリアヌスの三位一体用語、オリゲネスの体系化の功罪
+- 3. 公会議時代：三位一体論とキリスト論の定式化（4〜5世紀）
+  - ニカイア公会議（325）とニケーア信条：アタナシオスによる「同質（ホモウシオス）」擁護
+  - カッパドキア教父（バシレイオス、グレゴリオス2人）による位格・本質の整理
+  - コンスタンティノポリス公会議（381）での聖霊論、エフェソス（431）とカルケドン（451）でのキリスト論
+  - アウグスティヌス『三位一体論』と『告白』：神・恩寵・人間の内面の結びつき
+- 4. 人間・罪・恩寵：アウグスティヌス以後の人間論と救済論の展開（5〜12世紀）
+  - ペラギウス論争を通じた原罪・自由意志・恩寵の位置づけ（アウグスティヌスの影響）
+  - 贖罪理解の多層性：勝利者キリスト（クリストゥス・ウィクトル）から、アンセルムス『なぜ神は人になられたか』へ
+  - 祈り・修道制・秘跡理解が「救いの経験」をどう語り直したか（修道院神学と学知の関係）
+- 5. スコラ学と体系神学：理性と言語で信仰を記述する（12〜13世紀）
+  - 大学の成立と、論証・区別を重んじる方法（クェスティオ／スコラ的方法）
+  - トマス・アクィナス『神学大全』：神論・創造・天使論・キリスト論・恩寵論の総合
+  - 神の存在証明、類比、啓示と理性の関係をめぐる積み重ね（後の近代批判の土台にもなる）
+- 6. 東西の分岐と神学的アクセント：同じ信仰を別の語彙で語る（中世〜近世）
+  - 「フィリオクェ」問題、教会理解の差異が教義言語に与えた影響
+  - 東方の神秘神学（ディオニュシオス系譜）とヘシュカズム、グレゴリオス・パラマスの神学
+  - 西方の法的・制度的整理と、教義・典礼・霊性の相互作用の違い
+- 7. 宗教改革と「信条化」：義認・予定・教会の可視性をめぐる再編（16〜17世紀）
+  - ルターの義認論（信仰義認）と秘跡理解、信仰と行い・倫理の結節点
+  - カルヴァン『キリスト教綱要』に見られる神の主権、予定、救いの確信の論理
+  - トリエント公会議（1545–1563）と対抗宗教改革：恩寵・秘跡・教会の権威の再定式化
+  - 各種信仰告白（アウクスブルク信仰告白、ウェストミンスター信仰告白等）と教義教育（カテキズム）
+- 8. 近代の衝撃：啓蒙・歴史批評・宗教経験の神学化（18〜19世紀）
+  - 理神論、啓蒙思想、自然科学の進展が「奇跡」「啓示」「終末」をどう問い直したか
+  - 聖書批評（歴史批評）と教義の関係：史的イエス探求、ハルナックの自由主義神学
+  - シュライアマハー『宗教論』に象徴される「宗教経験」中心の転回と、その評価・反発
+- 9. 20世紀神学の転回：危機神学から公会議・エキュメニズムへ（20世紀）
+  - 第一次世界大戦後の危機意識と弁証法神学：カール・バルト『ローマ書』・『教会教義学』
+  - 実存主義神学と非神話化：ルドルフ・ブルトマン、啓示と言語の問題
+  - カトリック側の刷新と第二バチカン公会議（1962–1965）：伝統理解、典礼、教会論の更新
+  - 終末論の再評価（ユルゲン・モルトマン『希望の神学』等）と、倫理・社会参加の神学化
+- 10. 現代の争点と継承：多声的な神学が「古典教義」を読み替える（20世紀後半〜現在）
+  - 解放神学（グスタボ・グティエレス等）、フェミニスト／ポストコロニアル神学が提起する救済・教会・倫理の再定義
+  - 新たな弁証の形：世俗化、無神論批判、宗教間対話の中でのキリスト論・三位一体論
+  - 伝統回帰と再資源化：教父研究の復権、典礼運動、トマス再評価など
+  - まとめ：三位一体・キリスト論・人間論・救済論・終末論・倫理は、歴史のなかで常に「問いの形」を変えながら受け継がれてきた
+-->
+
+### 1. 教義と神学の輪郭：信仰告白・礼拝・論争のあいだ
+
+キリスト教の教義と神学は、はじめから体系書として与えられていたわけではない。むしろ、祈りと礼拝、洗礼と聖餐、説教と共同体生活のなかで「何を信じ、誰を礼拝し、どう生きるのか」を言葉にしてきた歴史の積み重ねである。初代教会では、イエスを「主」と告白する短い言葉が中心にあり、そこから聖書（旧約・新約）の読み方、神が唯一であることと父・子・聖霊を語ることの整合、救いとは何か、悪と死をどう理解するか、といった問いが次々に立ち上がった。
+
+教義形成を動かしたのは、単なる思弁ではない。第一に、聖書の解釈である。創造と救い、律法と福音、十字架と復活、終末の希望と現在の倫理を、どのような筋道で読み合わせるかが常に争点になった。第二に、異説や異端と呼ばれた主張との対決である。キリストをどう理解するか、物質世界をどう評価するか、恵みと自由意志の関係をどう捉えるかは、論争の熱のなかで言語化され、精密化されていった。第三に、教会の公的決定である。公会議や信条は、議論の結論を共同体の言葉として固定し、礼拝と教育を通じて広めた。
+
+こうして成立した教義は、信仰生活の実践とも分かちがたく結びつく。神論や三位一体論は「誰に祈るのか」を規定し、キリスト論は「救いがどこから来るのか」を語り、人間論や原罪論は「人はなぜ変われないのか」を直視させ、救済論は恵み・信仰・悔い改めをどう理解するかを左右する。天使や悪魔、聖者への語りは、見えない世界の秩序を与え、終末論は死と裁き、希望と責任をめぐる感情と倫理を形づくる。キリスト教神学の歴史は、これらの主題が時代ごとに異なる問いを受け取りながら、相互に影響し合い、組み替えられてきた過程として読むことができる。
+
+### 2. 使徒時代から護教家へ：キリスト告白の多様性と統一への試み（1〜2世紀）
+
+1世紀の教会は、ユダヤ教の伝統を背景にしつつ、異邦人世界へと広がるなかで、自己理解を急速に深めた。パウロ書簡や福音書、使徒言行録に見られるのは、十字架の死と復活によって救いが与えられたという中心主張と、それを礼拝・共同体規律・宣教の言葉へと展開する試みである。やがて洗礼の際の問い答えが定型化し、後に使徒信条へと連なる信仰告白の原型が形を取っていく。礼拝の中で唱えられる短い言葉が、神学の長い議論を先取りしていたとも言える。
+
+しかし、同じイエスの名を用いながら、救いと世界の理解は多様だった。グノーシス主義は、秘教的な知識（グノーシス）による解放を強調し、創造世界を劣ったものと見る傾向を持った。マルキオンは、旧約の神と福音の神を切り離す急進的な二元論を唱え、正典形成を促す逆説的な役割を果たした。モンタノス運動は、預言と終末への切迫感を前面に出し、啓示と秩序の関係を揺さぶった。こうした潮流に対し、教会は「信仰の規範」を明確にし、聖書の読みの筋道を整えていく。
+
+この段階で重要なのが、イレナイオスである。2世紀末のイレナイオスは『異端反駁』で、創造から贖いまでの救済史の一貫性を説き、父なる神と子なるキリストの働きを「回復（アナケファライオーシス）」として描いた。テルトゥリアヌスは、ラテン語の神学用語を鍛え、「三位一体」を語る枠組みを整備した。オリゲネスは、聖書解釈と神学の体系化を推し進めたが、霊魂や終末をめぐる大胆な思索は後世の論争も呼び、教義と言語の境界を考えさせる存在となった。2世紀の教会は、正典・信条・司教制といった枠組みを整えつつ、神とキリストと救いを語る「共通の言葉」を生み出す入口に立っていた。
+
+また、異教社会に向けて信仰を説明する護教家たちの仕事も、教義形成に現実的な輪郭を与えた。ユスティノス（ユスティヌス）は『第一弁明』などで、キリスト教が無秩序な迷信ではなく、真理への理性的な探求であることを主張し、「ロゴス」の概念を用いてギリシア哲学との対話を試みた。アンティオキアのイグナティオスが殉教への途上で書いた書簡は、教会の一致、聖餐の重み、キリストの真の受肉を強調し、教義が共同体の秩序と礼拝の実践を守るための言葉でもあったことを示す。『ディダケー』のような初期文書が伝える倫理訓戒も、信仰告白が日々の生活規範と不可分だったことを物語っている。
+
+### 3. 公会議時代：三位一体論とキリスト論の定式化（4〜5世紀）
+
+4世紀に入ると、教会が帝国の中で公的な位置を得る一方で、神論とキリスト論をめぐる対立は激化した。アリウスをめぐる論争は、子なるキリストが被造物に近いのか、それとも真の神なのかという核心を突いた。ニカイア公会議（325）は、ニケーア信条を通じて子が父と「同質（ホモウシオス）」であることを告白し、アタナシオスはその解釈と擁護に生涯を捧げた。ここで争われたのは抽象概念ではなく、礼拝の対象と救いの根拠である。もしキリストが真の神でないなら、人を神へと結びつける救いは成り立たない、という直観が教義を押し出した。
+
+その後の議論は、父・子・聖霊の関係を精密に言語化する方向へ進む。カッパドキア教父（バシレイオス、ナジアンゾスのグレゴリオス、ニュッサのグレゴリオス）は、「本質」と「位格」を区別しつつ、唯一神信仰と三位の告白を両立させる語彙を整えた。コンスタンティノポリス公会議（381）は、聖霊の神性を含む形で信条を確定し、後にニカイア・コンスタンティノポリス信条として広く受け継がれていく。
+
+一方で、キリストが神であるなら、同時に人であることをどう理解するかが次の焦点となった。エフェソス公会議（431）は、マリアを「神の母」と呼ぶことの是非をめぐる論争を背景に、キリストの位格の一体性を強調した。カルケドン公会議（451）は、キリストが「一つの位格において、混合せず、変化せず、分割せず、分離せず」二つの本性を持つと定式化し、後世の正統理解の基準となる。この定式は、神と人が救いにおいて出会う場所を守るための、きわめて緊張した言語であった。
+
+この時代のキリスト論争は、単に「神か人か」という二択ではなく、「神であり人である」という告白を支える論理の精度を争うものだった。アポリナリオスのようにキリストの人間性の一部を限定して理解しようとする見解、ネストリウスをめぐる「二人のキリスト」に近い理解への疑念、エウティケスに端を発する単性論的傾向など、論点は多岐にわたった。カルケドン定式は、これらの極端化を避けつつ、救いが「神の側の働き」でありながら「人間の現実の中で」起こったことを守ろうとした点で、キリスト教神学の基準線となった。その後も一意志論をめぐる論争などが続くが、古代の公会議が残した定式は、後世が新たな問題に直面したときの参照枠として機能し続ける。
+
+同時代の西方では、アウグスティヌスが神学を深めた。『告白』が示す内面の探求は、罪と恩寵、意志と欲望の絡み合いを明晰に描き、救済論の後世への影響は計り知れない。『三位一体論』では、記憶・知性・意志のような人間の内面の類比を用いながら、三位一体の神秘を理解しようとした。こうして教義は、公会議の定式と、霊性・倫理を含む神学的探究の双方によって支えられる構造を獲得した。
+
+### 4. 人間・罪・恩寵：アウグスティヌス以後の人間論と救済論の展開（5〜12世紀）
+
+教義の中心が神とキリストの告白にあるとしても、救いが人間にどのように届くかという問いは避けられない。アウグスティヌスとペラギウスの論争は、罪と自由意志、恩寵の優先性をめぐる決定的な分岐点となった。人間は自力で善を選びうるのか、それとも罪によって根本から損なわれ、神の恵みなしには神へと向かえないのか。アウグスティヌスの原罪理解は、洗礼、悔い改め、祈りの切実さを支える枠組みとして広く受け継がれたが、同時に、人間の責任や倫理の能動性との緊張も生み続けた。
+
+救いの中心である十字架をどう理解するかも、多様に展開した。古くから、キリストが死と悪の力に勝利したという「勝利者キリスト（クリストゥス・ウィクトル）」的な語りが重んじられたが、やがて「なぜ神は人になられたのか」を理詰めで問う動きが強まる。アンセルムスは『なぜ神は人になられたか』で、罪によって損なわれた神の名誉が回復される必要を論じ、贖罪を秩序と正義の観点から説明した。ここでの議論は、後の宗教改革期の贖罪理解や近代の批判の焦点にもなっていく。
+
+この時代の神学は、修道制や典礼の深化とも結びつく。祈りと禁欲、共同体生活のなかで、罪と悔い改め、恩寵の経験が言語化され、秘跡（とりわけ洗礼と聖餐、悔い改め）の理解が整えられた。死後の状態をめぐる想像力も豊かになり、煉獄の観念が中世西方で発展していく。終末論は単に未来の時間割ではなく、死の恐れ、裁きの切迫、聖者の交わりへの希望を含む総体として、信仰と倫理を動かす力となった。
+
+西方では、グレゴリウス1世（グレゴリウス大教皇、在位590–604）が『対話録』などで煉獄的な浄化のイメージを広め、死者のための祈りやミサといった実践が救済理解と絡み合っていった。終末や裁きの表象は説教と美術を通じて生活感覚に入り込み、ダンテ『神曲』（14世紀初頭）が地獄・煉獄・天国の想像力を文学的に結晶させたことは象徴的である。こうした文化的形象は、教義の厳密な定式とは別の回路で、人々の罪責感、悔い改め、希望を形づくり、やがて宗教改革期の批判や再編にも影響していく。
+
+### 5. スコラ学と体系神学：理性と言語で信仰を記述する（12〜13世紀）
+
+12世紀以降、西方では大学が成立し、神学は講義と討論、注解と論証の学として整備される。スコラ学的な方法は、問いを立て、異論を列挙し、区別を重ねて結論へ到るという形式を取り、神学的概念の精密化に大きく寄与した。ペトルス・ロンバルドゥスの『命題集』は、その後の神学教育の基本テキストとなり、神論・創造・恩寵・秘跡といった主題を体系的に配置する枠組みを提供した。
+
+トマス・アクィナスの『神学大全』は、スコラ学的体系の一つの頂点である。神の存在と属性を論じる神論は、啓示の神秘を否定するためではなく、信仰が理性に反しないことを示そうとする試みとして理解されるべきだろう。トマスは、神の単純性、全能、摂理を語りつつ、被造物が神に似せられているという類比の考えで、神と言語の距離を調停した。創造論は、世界が偶然でも必然でもなく、自由な神の意志に由来することを強調し、そこから天使論も展開される。天使は単なる神話的存在ではなく、知性と意志、秩序と悪の問題を考える枠となり、堕天使（悪魔）をめぐる理解は、罪の現実性を象徴的に支える役割を担った。
+
+スコラ学の成果は、理性と啓示、自然法と恩寵、徳と秘跡、自由意志と予定といった対立しがちな項目を、区別の技術で一つの体系に組み込んだ点にある。だが同時に、「信仰は論証でどこまで語りうるのか」という緊張も露わにした。神の超越を強調する否定神学や神秘神学が並行して発展したのは、その緊張が信仰の内側から要請されたからでもある。
+
+この緊張は、神学内部の多様性として具体化する。フランシスコ会系のボナヴェントゥラは、知の秩序を祈りと観想へ接続し、救済史の全体を神への上昇として描いた。ドゥンス・スコトゥスは、神の自由と意志を強調し、普遍と個物の関係や救済の論理を別様に組み立てた。さらにウィリアム・オッカムらの唯名論的傾向は、概念と言語の慎重な扱いを促しつつ、神学と言語の関係をめぐる議論を先鋭化させた。こうした差異は、後の宗教改革や近代思想が神学と理性の関係を批判するときの前提にもなり、同時に教義言語の柔軟性と限界を学ばせる歴史でもあった。
+
+### 6. 東西の分岐と神学的アクセント：同じ信仰を別の語彙で語る（中世〜近世）
+
+キリスト教の教義史は、西方の体系化だけで完結しない。東方教会は、礼拝と言語、神秘の経験を重んじながら、独自の神学的アクセントを形成した。東西の分岐を象徴する論点の一つが「フィリオクェ」（聖霊が父から、そして子から発出するという語句）である。西方では信条にこの語句を付加する慣行が広がり、やがて教義・教会権威の問題へと結びついた。一方、東方は父を唯一の根源とする理解を守り、三位一体を「起源」と「交わり」の観点から語ろうとした。こうした違いは、単なる語句の争いではなく、神の内的関係をどう捉え、教会が教義をどう決定するかという構造の差を映し出した。
+
+東方の神学は、疑似ディオニュシオス（アレオパゴスのディオニュシオスの名で伝わった文書群）に代表される否定神学と天上位階の思想を通じて、神の不可知性と被造物の秩序を深く結びつけた。14世紀には、ヘシュカズム（沈黙の祈り）の伝統を背景に、グレゴリオス・パラマスが神の「本質」と「エネルゲイア（働き）」を区別し、神が超越的でありつつ、恩寵として現実に参与されることを論じた。これは救済論を、法廷的な宣告ではなく、神のいのちへの参与（神化）として語る東方的傾向を示している。
+
+1054年に象徴的な断絶が生じた後も、教義と霊性は相互に影響しながら歩み続けた。西方では煉獄や免罪符をめぐる実践が拡大し、終末論と悔い改めの文化が制度化されていく。東方では聖像（イコン）をめぐる神学が深まり、787年の第二ニカイア公会議での聖像崇敬の是認を経て、受肉の神学が礼拝の視覚言語として具体化した。教義は抽象的な命題であると同時に、祈り・芸術・制度の中で身体化されることが、この時代の歩みからはっきり見えてくる。
+
+とりわけ東方の聖像論争（8〜9世紀）は、教義が礼拝の実践と不可分であることを明確にした。受肉したキリストを描くことは偶像礼拝なのか、それとも受肉の現実を肯定する信仰告白なのか。843年に聖像崇敬が最終的に復権すると、聖像は単なる装飾ではなく、神学的主張を担う「見る言葉」として位置づけられた。東西の亀裂は、1054年の出来事だけでなく、1204年の第四回十字軍によるコンスタンティノポリス攻略のような政治的・軍事的経験によっても深まり、教義の差異は互いの不信と結びつきやすくなった。こうした歴史的体験は、同じ信条を共有しうるはずの部分が残っていても、神学的対話の前提そのものを脆くすることがある。
+
+### 7. 宗教改革と「信条化」：義認・予定・教会の可視性をめぐる再編（16〜17世紀）
+
+16世紀の宗教改革は、教義の再編を一気に加速させた。ルターが1517年に「九十五か条の提題」を公にした背景には、免罪符や功績の積み上げが救いの確信を脅かすという切実な問題があった。ルターの義認論は、「信仰によってのみ義とされる」という主張として知られるが、その要点は、救いが人間の達成ではなく神の恵みであること、そしてその恵みがキリストの約束として言葉と秘跡を通じて与えられることにあった。ここでは救済論が、罪の現実と慰めの論理の両方を支える中心に据えられた。
+
+カルヴァンは『キリスト教綱要』を通じて、神の主権と摂理を強調し、救いの確かさを神の側の確実性に結びつけた。予定論はしばしば誤解も招くが、カルヴァン派の議論は、神の恵みが偶然に左右されないという確信を与える一方で、人間の自由と責任をどう語るかという古くからの緊張を別の形で再燃させた。さらに、教会をどう理解するか、秘跡をどのように位置づけるか、司教制や教皇権をどう評価するかが、教義と制度を一体として問い直す論点になった。
+
+カトリック教会は、トリエント公会議（1545–1563）を通じて、恩寵と自由、秘跡、教会の権威を再定式化し、対抗宗教改革としての教義教育と霊性刷新を進めた。宗教改革は「信条化」の時代でもある。アウクスブルク信仰告白（1530）やヘルヴェティア信仰告白、ウェストミンスター信仰告白（1646）などの文書は、争点を整理し、共同体の境界を可視化した。カテキズム（教理問答）は、教義を生活の言葉として浸透させ、倫理と敬虔の形を整える役割を担った。教義はここで、統一の言葉であると同時に、分裂の境界線にもなった。
+
+他方で、宗教改革は「近代的主体」の目覚めだけでなく、教会の霊性と実践を組み替える運動でもあった。カトリック側ではイグナティウス・ロヨラが『霊操』を通じて内面的識別の道を示し、イエズス会が1540年に教皇によって認可されると、教育・宣教・霊性指導を通じて神学の刷新に寄与した。改革派・ルター派の側でも、信条文書の整備は論争のためだけでなく、説教、聖餐、教会規律、家庭教育を支える実務として機能した。17世紀には、アルミニウスをめぐる予定論争や、ドルト会議（1618–1619）による教義の整序など、救済の確かさと人間の応答をどう結びつけるかが改めて争われ、古代以来の「恵みと自由」の緊張が別の形で反復されることになる。
+
+### 8. 近代の衝撃：啓蒙・歴史批評・宗教経験の神学化（18〜19世紀）
+
+近代に入ると、キリスト教神学は外部からの強い問いにさらされる。啓蒙思想は理性の自立を掲げ、奇跡や啓示を疑い、宗教を道徳や自然神学へと還元しようとした。理神論は、創造主を認めつつも、受肉や復活、終末の裁きといった特異な出来事を周縁化し、教義の核心を揺さぶった。自然科学の発展は、世界理解の枠組みを変え、創造や摂理、悪と苦しみの問題を新たな形で突きつけた。
+
+同時に、聖書そのものが歴史的文書として批判的に研究されるようになる。歴史批評は、本文の成立過程や編集、背景を分析し、伝統的な一枚岩の読みを解体した。史的イエス探求は、信仰のキリストと歴史上のイエスの関係を問い直し、教義がどのように形成されたかを歴史の言葉で説明しようとした。アドルフ・フォン・ハルナックに代表される自由主義神学は、福音の本質を倫理的教えや神の父性へと収斂させ、古代の教義定式を歴史的衣装として相対化する傾向を示した。
+
+こうした動きに対して、信仰を「感情」や「経験」の領域で再基礎づけようとする試みも現れる。シュライアマハーは1799年の『宗教論』で、宗教を道徳や形而上学から区別し、「無限なるものへの依存の感情」を中心に据えた。これは、外部批判に対抗して信仰の固有性を守ろうとする一方で、教義を経験の表現として捉え直す転回でもあった。近代神学は、理性・歴史・経験という三つの圧力の下で、三位一体や受肉、贖罪、終末といった古典教義をどう語り直すかを迫られ続けたのである。
+
+この時代の問いは、神学の方法を根底から変えた。カントは1793年の『単なる理性の限界内の宗教』で、宗教を道徳理性の枠内で捉え直し、啓示と教会制度に批判的な視点を示した。ヘーゲルは歴史の中で自己展開する精神として宗教を理解し、教義を「表象」から「概念」へと翻訳しようとした。19世紀後半にはダーウィン『種の起源』（1859年）が自然史理解を一変させ、創造論・人間論・罪の起源をめぐる議論に長い影を落とす。リッチュルやその周辺の神学は、キリスト教を価値判断と共同体の倫理に結びつけ、教義を実践的理性の言語として再編しようとした。近代の衝撃とは、教義の内容だけでなく、「教義を語るとは何をすることか」という自己理解までが問われたことにある。
+
+### 9. 20世紀神学の転回：危機神学から公会議・エキュメニズムへ（20世紀）
+
+20世紀前半、第一次世界大戦の経験は、進歩史観と文化への信頼を深く揺るがせた。こうした「危機」の中で、カール・バルトは『ローマ書』（1919年初版、改訂を経て1922年版）で、人間の宗教や文化を超えて語りかける神の啓示を強調し、弁証法神学（危機神学）の潮流を形づくった。バルトの大著『教会教義学』は、神の自由、啓示、選び、和解を巨大な体系として描き、教義を近代的主体の内面に還元しない道を示した。ここでは三位一体論が、神がご自身を語り、ご自身を与える出来事として再配置され、キリスト論と救済論が体系の中心に据え直される。
+
+一方で、近代批判の成果を受け止めつつ、信仰を現代の存在理解の中で語り直そうとする試みもあった。ルドルフ・ブルトマンは、新約の神話的世界像をそのまま受け取るのではなく、実存論的に解釈する「非神話化」を提唱し、啓示と言語、歴史と信仰の関係をめぐる議論を深めた。これに対する反応として、オスカー・クルマンの救済史神学や、さまざまな聖書神学の潮流が、歴史と信仰の接続を別の形で模索した。
+
+カトリック教会でも、20世紀には教父研究の復興や典礼運動が進み、神学は更新の機運を高めた。その結実が第二バチカン公会議（1962–1965）である。典礼憲章や教会憲章は、教会を神秘体としてだけでなく「神の民」として捉え、聖書と伝統の関係、信徒の役割、現代世界との対話を明確にした。1965年の『ノストラ・エターテ』は宗教間関係にも新しい枠組みを提示し、教義が閉じた防衛線ではなく、対話を可能にする言語でもありうることを示した。
+
+さらに、終末論は再び神学の中心課題として浮上する。ユルゲン・モルトマンの『希望の神学』（1964年）は、終末を遠い未来の出来事に閉じ込めず、現在を変革する希望として捉え直した。こうして20世紀神学は、教義を「近代への応答」として再構成しつつ、教会一致運動（エキュメニズム）や社会的課題への関与の中で、その言葉を公共性へ開こうとした。
+
+この「公共性」への開きは、教会と国家、倫理と政治の関係をめぐる神学的反省にもつながった。1934年のバルメン宣言は、国家やイデオロギーを最終的権威として受け入れない信仰告白を提示し、教義が歴史状況の中で抵抗と証言の言葉になりうることを示した。1948年に世界教会協議会（WCC）が設立されると、教会一致は単なる組織統合ではなく、洗礼・聖餐・職制、教会論、倫理的課題をめぐる対話として進められた。カトリック神学でも、カール・ラーナーが恩寵と人間存在の普遍的開かれを論じ、アンリ・ド・リュバックやイヴ・コンガールらが教会と伝統を再検討するなど、教義が現代の人間理解・社会理解と結び直されていった。こうした動きは、三位一体・キリスト論・教会論を、閉じた教理体系ではなく、世界と向き合う枠組みとして再配置する試みと理解できる。
+
+### 10. 現代の争点と継承：多声的な神学が「古典教義」を読み替える（20世紀後半〜現在）
+
+20世紀後半以降、神学の声は多様化し、教義の語りも単線的ではなくなった。解放神学は、貧困と抑圧の現実を前に、救いを来世の慰めに閉じ込めず、歴史の中の解放として語り直す。グスタボ・グティエレス『解放の神学』（1971年）は、救済論と倫理、教会論を結び直し、罪を個人の内面だけでなく構造的な悪として捉える視点を提示した。ブラック・シアターやフェミニスト神学は、受肉や十字架、聖霊の働きを、周縁化された経験から読み替え、神の語りがどの社会的位置から発せられてきたかを問い返した。
+
+同時に、世俗化や無神論批判、科学技術の進展は、弁証の形を変えた。かつての「奇跡の証明」よりも、世界の意味、人格、関係、苦しみの中での希望をどう言語化するかが前景化し、キリスト論も排他的主張としてではなく、宗教間対話と緊張を抱えたまま語り直される場面が増えた。宗教間関係の中で三位一体や受肉をどう語るかは、教義の核を曖昧にする誘惑と、他者に開かれた言語を獲得する可能性の双方を含む難題である。
+
+他方で、伝統回帰や再資源化の動きも顕著である。教父の著作や古典信条の再読、トマス神学の再評価、典礼の重視は、現代の断片化に対する一つの応答として進んだ。分析哲学的手法を用いた神学（いわゆる分析神学）や、霊性神学の再評価など、方法論の幅も広がっている。ここで重要なのは、古典教義が「過去の遺物」ではなく、今なお問いを生成しうる言語として扱われている点だろう。
+
+結局のところ、三位一体論・キリスト論・人間論・救済論・終末論・倫理は、互いに絡み合いながら、歴史の中で問いの形を変えてきた。ある時代には異端論争が言葉を研ぎ澄まし、別の時代には制度や実践が教義の重心を動かし、また別の時代には外部批判が神学の方法を変えた。キリスト教神学の歴史は、信仰が同一性を守るために固定化される過程であると同時に、新しい状況に出会うたびに、同じ告白を別の言葉で語り直してきた創造的な過程でもある。
