791の分野の歴史を追加

--- a/79-諸芸．娯楽/791-茶道/791-茶道.md
+++ b/79-諸芸．娯楽/791-茶道/791-茶道.md
@@ -12,3 +12,128 @@
 
 ## 分野の歴史
 
+### 1. 茶の起源と東アジアの茶文化
+
+茶の歴史は、まず薬としての「苦い葉」を煎じる営みから始まった。中国では、後漢から六朝にかけて茶の飲用が広がり、唐代になると生活文化として輪郭を持ち始める。陸羽が『茶経』を著したのは8世紀後半で、茶の産地、製法、道具、湯の扱い、飲み方を体系として描いた点で画期だった。ここで重要なのは、茶が単なる嗜好品ではなく、道具の選択、火と水の加減、場のしつらえを通じて美意識と倫理をまとい得る、という可能性が早くから示されたことである。
+
+宋代には、抹茶を点（た）てて飲む点茶が隆盛し、茶碗の中で泡を競うような洗練も生まれた。器や水、炭、湯をめぐる感覚は、後に日本で茶の湯が「道」として形成されるとき、素材と作法を結びつける基盤になる。茶はまた、文人の交遊や仏教世界とも深く結び、清浄・節度・静謐といった価値観を帯びながら、宴や詩文と並ぶ教養として位置づけられていった。
+
+その後、明代には茶の製法と飲み方が大きく転換する。洪武帝が1391年に貢茶の蒸し固め茶を禁じ、散茶（葉茶）へと改めたことは、点茶中心の文化を衰退させ、急須で淹れる喫茶の普及を促した。結果として、抹茶を点てる技術やそれを支える道具立ては東アジアの中で周縁化していくが、日本ではこの「点てる茶」を核に、独自の洗練が続いていくことになる。
+
+東アジアの茶文化を見通すと、茶はつねに素材と技術、場と倫理を結びつけて発達してきた。どの茶を選ぶか、どの水を用いるか、火をどう扱うか、器をどのように手に取るか。こうした細部の積み重ねが、のちに日本で「茶の湯」が生活術・芸道・精神修養として語られる際の共通語彙となっていく。
+
+さらに言えば、点茶の文化は「粉にして点てる」ための技術連鎖を必要とする。葉を蒸して乾かし、碾茶として整え、石臼で挽いて抹茶にし、茶筅で泡立てる。その全工程が揃ってはじめて、一服の質が安定する。後に日本で茶の湯が精緻な道具立てへ向かうのは、鑑賞のためだけでなく、この技術連鎖を確実に作動させるためでもあった。
+
+### 2. 日本への伝来（平安〜鎌倉）
+
+日本に茶が伝わった経路は複数あるが、制度として継続した喫茶文化は鎌倉期に明確になる。臨済宗の栄西（1141-1215）は宋からの帰国（1191年頃）後、禅の修行とともに抹茶の飲用を広め、さらに『喫茶養生記』（1211年）で茶を養生・修行の助けとして位置づけた。ここで茶は、眠気を払う実用性だけでなく、身体と心の調えを媒介するものとして語られ、のちの茶の湯が「心を映す行い」として語られる下地がつくられた。
+
+初期の喫茶は、寺院や上層の場に限られていたが、やがて儀礼と交際の道具にもなっていく。茶は高価で、道具も舶来品が中心だったため、茶を点てるという行為そのものが、異文化への憧憬や権威の徴となった。抹茶の粉を扱う所作、湯の温度を見極める感覚、器の選択といった要素は、この時代には断片的であっても、後世に「作法」として再編される素材として蓄積されていく。
+
+ただし、栄西以前にも茶の存在は知られていた。平安時代、815年に僧・永忠が嵯峨天皇に茶を献じたという伝承は、茶がすでに宮廷文化の周辺に現れていたことを示す。しかし当時の喫茶は継続的な社会習慣にはなりにくく、寺院と上層の限定された場で途切れがちだった。鎌倉期の再導入が決定的だったのは、禅院という制度と結びつくことで、茶が「続く実践」になったからである。
+
+また、茶の湯の成立には、栽培と産地の形成が欠かせない。京都近郊では栂尾の茶が名声を得て、明恵上人（1173-1232）が茶の価値を説いたことでも知られる。やがて宇治の茶が名高い産地として台頭し、良質な茶葉の確保が、点てる技術や道具の洗練を現実のものにしていく。素材（茶・水）への執着は、後世の茶の湯が「まず一服がうまいこと」を根に持つ理由でもある。
+
+栄西が開いた建仁寺（1202年）は、禅院文化の拠点として喫茶の実践を支えた。寺院の規律、道具の保管、来客の接遇といった日常的な運営の中で、茶は自然に「作法」へと近づいていく。抹茶を点てるには茶臼や茶筅も必要で、単に茶葉があるだけでは文化は続かない。生産（茶）と設備（道具）と場（寺院）の三つが揃って、はじめて喫茶は日常になり、そこから芸道へと伸びる余地が生まれた。
+
+### 3. 禅院文化と武家社会（鎌倉〜南北朝）
+
+禅院は喫茶を生活のリズムに組み込み、茶の点て方や用具の管理を制度化した。禅寺ネットワークを通じて茶の知識が共有される一方、武家社会では茶が饗応と遊興へと接続される。代表的なのが闘茶で、産地や銘柄を当てる競技性が人々を熱狂させた。闘茶はしばしば賭け事化し、奢侈として批判も受けたが、銘を言い当てるための鑑識眼や、場を運営する段取りは、茶会の原型として見逃せない。
+
+この段階で、茶は「何を飲むか」だけでなく「どのように集うか」をめぐる文化になる。亭主が客を迎え、道具を整え、湯を沸かし、茶を点てて供する。その一連の流れの中で、炭の扱い、水の質、茶の量、器の口当たりが意味を持ち始める。後世の点前が細部にこだわるのは、単なる形式主義ではなく、こうした経験の蓄積が「よい一服」を支えると理解されたからである。
+
+禅院における喫茶は、単なる飲料ではなく、修行の緊張を調える「間」の技法でもあった。禅語の「喫茶去」が象徴するように、茶は説教や議論の決着点ではなく、いったん場を平らにするための共同行為として機能する。後の茶の湯が、主客の対話を重んじながらも、言葉より手順と沈黙が場を支える芸道へと傾く背景には、こうした禅的な身体感覚がある。
+
+同時に、武家社会が求めたのは、集いを統率する技術である。闘茶や茶寄合では、席の順、献立、道具の点検、湯を沸かす段取りが成否を分ける。やがて茶会の記録（会記）が残されるようになると、出来事は再現可能な「型」として蓄積され、次の世代へと伝えられていく。茶の湯が歴史を持つ芸道として成立する前提は、すでにこの段階で整い始めていた。
+
+### 4. 室町の「書院の茶」と東山文化
+
+室町期には、茶は政治と文化の中心に近づき、会所や書院といった空間での饗応として洗練される。足利義政（1436-1490）の東山文化は、絵画・工芸・建築の趣味を結晶させ、茶の場もその中で発展した。ここで重んじられたのが唐物や名物と呼ばれる舶来の器物であり、茶入、天目茶碗、香炉、掛物などが「格」を表す記号として扱われた。道具を所蔵し、由緒を語り、取り合わせを工夫することが、茶の湯の中心的な技能になっていく。
+
+この時代の茶は、のちに「書院の茶」と総称されるように、広い座敷空間で豪華な道具を展観する性格が強い。床の間に掛物を掛け、唐物の茶道具を並べ、客はそれを鑑賞し、話題にする。ここで重要なのは、茶が「見る」文化と強く結びつき、同時に場の礼節が整備されていった点である。義政の周辺で活動した同朋衆は、器物の鑑定やしつらえを担う専門家として、茶の湯を支える知的基盤を形成した。
+
+同朋衆の代表格として能阿弥（1397-1471）が挙げられ、唐物の鑑定や座敷飾りの知識が、権威の演出を支えた。室町期に編まれた座敷飾りの手引書『君台観左右帳記』は、床の間や棚の飾り方を通じて、器物を「秩序ある世界」に配置する規範を示した。茶の湯が、道具の価値を語る言葉と、それを提示する空間の文法を獲得したのは、この書院文化の成熟があったからである。
+
+また、この頃の茶は、まだ「狭い一室にこもる」ものではなく、社交の中心としての性格が強い。だからこそ、唐物と和物の取り合わせや、客の目線を誘導するしつらえが重視された。後に侘び茶が狭小空間へ向かうとき、書院の茶が築いた「鑑賞の言語」と「空間の作法」は、否定されるのではなく、密度を高める形で組み替えられていく。
+
+書院の茶が磨いたのは、器物だけではない。床の間、違い棚、書院窓といった書院造の要素は、飾りと視線の構成を可能にし、掛物や花を中心に据える舞台装置になった。やがて茶の湯は、棚物の扱い、道具の出し入れ、席中での拝見といった細部を持つようになるが、その原型は書院空間が生んだ「見せ方の技法」にある。後世の数寄屋が書院造を参照しつつ変形していくのも、この連続性ゆえである。
+
+### 5. 侘び茶の胎動
+
+豪奢な書院の茶が成熟する一方で、簡素な道具立てに価値を見いだす流れが生まれる。村田珠光（1423-1502）は、その転換を象徴する人物として語られる。珠光は、唐物一辺倒の価値観を相対化し、和物を取り合わせること、そして外形の豪華さよりも心のあり方を重んじることを説いた。「和漢のさかい」という言葉で表される思想は、異文化の権威に依存しない美の基準を模索する試みであり、後の侘び茶に連なる。
+
+侘びとは貧しさの賛美ではなく、余分を削って核を立たせる美意識である。小さな茶室、質朴な茶碗、控えめな花、静かな庭。こうした要素は、客の注意を道具の豪華さから亭主の心配りへと移し、さらに一座の関係性そのものを主題にする。のちに「一期一会」と要約されるような倫理が成立する以前から、茶の湯はすでに、ものの価値と人のふるまいを結びつける思想的な場へと歩み始めていた。
+
+珠光の背後には、禅僧・一休宗純（1394-1481）に代表される批評精神があるとされ、形式の背後にある真実を問う態度が、茶の湯に移植された。さらに16世紀に入ると、堺の町衆が担い手となり、武野紹鴎（1502-1555）が侘びの感覚を洗練し、のちの千利休へと橋を架ける。堺は貿易と金融の拠点で、舶来の道具を扱う知識と、町人の自立した美意識が交差し、茶の湯を新しい社交技術として育てた。
+
+この時代から、道具の選択がいっそう多層化する。唐物の権威を背景にしつつ、信楽・備前・丹波などの素朴な焼物や、朝鮮半島由来の井戸茶碗のような器に、逆説的な価値が見いだされる。素材（茶・水・炭）と器（茶碗・茶入・棗）、さらに空間（茶室・露地）が相互に響き合うように設計され、侘び茶は「簡素だからこそ難しい」総合芸へと近づいていった。
+
+侘び茶の洗練は、道具を減らすことと同義ではない。むしろ、限られた道具で場を立ち上げるために、茶入と棗の使い分け、茶杓の銘や仕立て、釜の肌合い、風炉先屏風の扱いなど、細部の判断が鋭く問われるようになる。棚を飾って見せる書院の論理から、亭主の手元で道具が働く草庵の論理へ。ここで「道具は主役ではなく、一座を支える役者」として再定義され、点前は鑑賞の段取りから、機能と美の一致を目指す動作へと変質していった。
+
+### 6. 桃山の数寄と政治
+
+戦国から桃山にかけて、茶の湯は権力の道具として用いられるようになる。織田信長（1534-1582）は名物狩りを通じて道具を集め、それを褒賞や統治の象徴として利用した。茶会は単なる趣味の集まりではなく、政治的な序列を示し、同盟や服属を演出する舞台となる。豊臣秀吉（1537-1598）に至ると、茶はさらに可視化され、北野大茶湯（1587年）のように、身分を超えて参加を促す巨大なイベントとしても展開された。
+
+この時代の「数寄」は、好みの表明にとどまらず、価値を創出する行為だった。どの茶碗を選び、どの茶入を用い、どの掛物を掛けるか。取り合わせの妙は、そのまま亭主の力量として評価された。豪華な金碧の装飾と、草庵の簡素さが並び立つのも桃山の特徴で、茶室や道具は多様な方向へ振れながら、やがて一つの規範へ収斂していく。その収斂の中心に立つのが、千利休である。
+
+信長・秀吉に近侍した茶人として、今井宗久（1520-1593）や津田宗及（1516-1591）が知られ、彼らは商人でありながら政治の中枢に出入りし、茶会の運営を通じて情報と人脈を扱った。秀吉が「黄金の茶室」を作らせた逸話は、茶の湯が侘びの静けさと対照的な、権力の視覚化にも利用され得たことを示す。茶の湯が芸道として自律するためには、こうした政治利用との緊張関係を引き受ける必要があった。
+
+同時に、桃山期は茶の記録文化が厚みを増す時代でもある。茶会の会記が残され、道具の由緒や取り合わせが文章化されることで、茶の湯は単発の出来事から、再現可能な経験へと変わる。後世の稽古が「先例」を重んじるのは、ただ古いからではなく、価値が言葉と記録によって共同体の資産になったからである。
+
+戦乱の時代にあって、名物道具は贈答品であると同時に、信用を担保する「動く資産」としても扱われた。茶の湯が政治に巻き込まれた背景には、道具が希少であること以上に、それが価値の言語と制度（書付、由緒、会記）によって裏付けられていたことがある。こうして茶の湯は、趣味の世界に留まらず、経済と権力が交差する場所にもなった。
+
+### 7. 千利休と茶の完成
+
+千利休（1522-1591）は、侘びの方向性を徹底し、空間・道具・作法を統合して茶の湯の骨格を固めた。草庵の茶室は小さく、客は露地を通って身を整え、躙口から身をかがめて入る。身分の差がいったん宙づりになるこの構造は、亭主と客が同じ高さで一座をつくるための装置でもあった。炭の置き方一つ、湯の音の聞き分け、茶を点てる手つき、茶碗を回す角度まで、細部は「うつくしさ」と「おいしさ」と「礼」を同時に満たすために磨かれていく。
+
+利休の革新は、名物の否定ではなく、価値の軸の移動にある。器の由緒や希少性よりも、場における必然性が重んじられる。例えば、手触りの温かさ、口当たり、光の落ち方、季節感。茶碗は鑑賞物であると同時に、一服を媒介する実用品であり、亭主の心配りを宿す媒体となる。利休の死は政治の激流の中に置かれるが、利休が遺したのは一人の流派というより、茶の湯を「道」として継承できるほどの形式と精神の結合だった。
+
+利休は堺の町衆として生まれ、千宗易の名でも知られる。商業都市の実務感覚と、侘びの精神性を結びつけた点に、利休の独自性がある。道具に関しても、舶来の権威に寄りかかるのではなく、場にふさわしいものを選び抜く姿勢が徹底された。楽焼の長次郎と結びついた楽茶碗は、手取りのよさと黒の深みで一服の密度を高め、茶碗が「見るもの」から「味わうもの」へと重心を移す象徴となった。
+
+また、利休が整えたのは茶室だけではない。茶事は炭で火を起こし、懐石で腹を整え、濃茶を共にし、薄茶で座をほどくという流れの中で、客の身体感覚を段階的に研ぎ澄ます。炉と風炉を季節で使い分ける発想は、火と湯の扱いを生活の暦に結びつけ、茶の湯を四季の芸へと変えた。素材（茶・水・炭）と器（茶碗・茶器）、さらに食（懐石）が一体となって初めて、利休の「一座建立」は成立する。
+
+利休の門人たちは、後に利休七哲と呼ばれ、武将・公家・商人にまたがる広い層へ茶の湯を運んだ。細川三斎（1563-1646）、蒲生氏郷（1556-1595）、古田織部、高山右近（1552-1615）などの名が挙げられ、彼らは戦国の実務と数寄の感覚を両立させた担い手だった。利休の規範が生き延びたのは、家元の系譜だけでなく、こうした実践者が各地で茶会を開き、道具を育て、茶室を造り、地域ごとの文化として根づかせたからでもある。
+
+利休の草庵は、茶室・茶庭・茶花を一体として構成する。露地の飛石は歩みを整え、蹲踞や手水鉢は身を清める動作を通じて、外の世界から一座へと心身を移行させる。茶花は豪華さよりも季節の気配を一輪で伝え、掛物は言葉を最小限にして場の主題を定める。国宝の茶室『待庵』が象徴するように、狭い空間に密度を生む設計は、器物の豪華さに代わって、客の注意を「いまの一服」に集中させる。水の冷たさ、炭の香り、湯の音、茶碗の温度といった感覚が、作法の細部と結びついて、茶の湯は総合的な経験として完成していく。
+
+### 8. 利休後の多様化と流派形成
+
+利休後、茶の湯は一枚岩ではなく、多様な美意識へと分岐する。武将茶人の古田織部（1544-1615）は、歪みや大胆な意匠を肯定し、緊張感のある「へうげもの」の感覚を茶の場に持ち込んだ。一方、小堀遠州（1579-1647）は公儀の作事や庭園に関わり、明るく洗練された「綺麗さび」と呼ばれる方向性を打ち出す。数寄屋建築は、こうした趣味の差異を受け止める器として、書院の格式と草庵の自由を往復しながら発展していった。
+
+また、利休の系譜は家としての継承を強め、のちに三千家（表千家・裏千家・武者小路千家）として整う。点前や道具の扱い、茶会の運営、口伝の内容は、家の権威とともに整理され、同時に各家の好みとして個性化する。こうして茶の湯は、普遍的な作法を持ちながら、細部の違いを楽しむ文化へと変わっていく。違いは競合であると同時に、長期的な継承を支える多様性でもあった。
+
+利休の孫にあたる千宗旦（1578-1658）は、侘びの精神を生活の中に根づかせ、後継者たちへと継承の軸を渡した。宗旦の子らを起点に、三千家がそれぞれ家元としての系統を確立していく過程は、茶の湯が「個人の芸」から「家の芸」へと制度化する重要な転換点である。制度化は保守化を招き得る一方、口伝の整理や道具管理の継続を可能にし、長期の継承に耐える枠組みを用意した。
+
+また、利休後の多様化は、道具と産地の発展とも連動する。志野・織部・唐津・萩といった諸窯の焼物は、茶碗や向付として茶の湯の需要に応え、逆に茶の湯の審美眼が工芸の方向性を規定した。茶室・茶庭も、狭小空間の演出から数寄屋としての住宅文化へと波及し、建築・造園・花の活け方までが、茶の湯の美意識によって再編されていく。
+
+さらに、三千家のほかにも、武家社会の礼法や好みに応じた諸流派が形成された。小堀遠州に連なる遠州流は、公儀の美意識に沿って整然としたしつらえを志向し、片桐石州（1648-1732）による石州流は、武家の実践に適合する点前と道具組を整えたとされる。流派の増殖は分裂ではなく、社会の多様な場に茶の湯を適用するための翻訳作業でもあった。場が変われば、求められる緊張と緩和の配分も変わり、それが点前や道具の「違い」として結晶していく。
+
+### 9. 江戸の家元制度と稽古事化
+
+江戸時代、社会が安定するにつれて茶の湯は武家の儀礼と結びつき、同時に町人文化の稽古事としても広がる。家元制度は、免状・伝書・口伝を軸に権威を組織化し、学ぶ者は段階を踏んで点前を修める仕組みに入っていく。ここで点前は、単に茶を点てる技術ではなく、立ち居振る舞い、言葉づかい、客をもてなす配慮、道具の扱いを含む総合的な身体技法として定着する。
+
+普及を支えたのは、出版と流通である。茶書が刊行され、道具の名や取り合わせが共有され、茶碗や茶入、釜、柄杓、棗といった道具類も市場を通じて広がった。茶室・露地の作庭、懐石の献立、花の入れ方など、茶の湯を取り巻く周辺領域も体系化される。結果として茶の湯は、少数者の鑑賞文化から、社会的な教養としての実践へと比重を移し、武家・町人・女性といった担い手の層を拡大させた。
+
+江戸の茶の湯を語るとき、数寄の精神と制度の均衡が要点になる。大名の世界では茶会が外交の場として働き、諸流派が武家礼法と結びつきながら広がった。松平不昧（1751-1818）のように、名物の鑑識と茶会の運営を通じて文化を支えた大名も現れ、道具の評価基準や書付の慣行は、近世の美術市場にも影響を与えた。
+
+一方、幕末には井伊直弼（1815-1860）が『茶湯一会集』を著し、「一期一会」という言葉で、一座のかけがえのなさを強調したことが後世に大きな余韻を残す。ここで語られる倫理は、利休以来の精神を近世末に言語化し直したものとも言える。茶の湯は、道具と作法が精緻になるほど、同時に「何のために点てるのか」という根源的な問いを繰り返し呼び戻す。
+
+稽古事としての広がりは、食文化にも波及した。茶事の懐石は、濃茶へ向かう身体の準備として位置づけられ、季節の素材、器の取り合わせ、酒の出し方までが一座の構成要素になる。炉開き、初釜といった年中行事は、稽古の暦として共同体を形づくり、茶室・茶庭・茶花・懐石が分業化しつつも「一つの体験」に収斂する近世的な完成形を生んだ。
+
+### 10. 近代〜現代の再定義
+
+近代化の波の中で、茶の湯は「伝統」として再編される。明治期以降、身分制が解体され、生活様式が変わると、茶の湯は社会的な実利よりも、礼法・教養・美術の側面が前面化しやすくなる。岡倉天心は英語で『The Book of Tea』（1906年）を著し、茶の思想を東洋の美意識として提示した。これは、茶の湯が国内の稽古事にとどまらず、国際的な文脈で語られる契機となった。
+
+一方で、江戸中期に売茶翁（高遊外、1675-1763）が広めた煎茶の文人趣味は、抹茶中心の茶の湯とは別の道筋で、簡便さと詩文・書画の交遊を重んじる喫茶文化を育てた。近代以降の日本では、抹茶の茶の湯と煎茶の趣味が併存し、茶をめぐる実践の幅を広げていく。戦後には、茶道は復興とともに教育・文化活動の場で再び拡大し、海外での紹介も進む。
+
+近代の茶の湯を現実に支えたのは、都市の資本とコレクション文化でもあった。益田鈍翁（1848-1938）、原三溪（1868-1939）、松永耳庵（1875-1971）といった数寄者は、古美術の蒐集と茶会を通じて、茶道具の保存と再評価を進めた。茶の湯はここで、実践芸であると同時に、美術史・工芸史と結びつく「展示されうる文化」としての顔を強め、博物館や展覧会の文脈にも乗っていく。
+
+工芸の側でも、茶の湯は新しい創作を刺激した。柳宗悦（1889-1961）が提唱した民藝の思想は、日常の器に宿る美を照らし、濱田庄司（1894-1978）や河井寛次郎（1890-1966）らの仕事は、茶の湯の器にも新しい視線をもたらした。北大路魯山人（1883-1959）のように食と器を一体で捉える感覚は、懐石と器の関係を現代的に更新する試みとして読み直すこともできる。
+
+今日の茶の湯は、伝統の継承と創造の間に立つ。炭や水、茶といった素材をどう生かすか、茶碗や茶器をどう選び、茶室や露地をどう整えるか、懐石をどう組み立てるか。これらは過去の形式をなぞるだけではなく、現代の生活環境や価値観の中で、何を守り、何を更新するかという問いでもある。人と人が向き合い、一服のために時間を整える行為として、茶の湯はなお新しい意味を獲得し続けている。
+
+また、茶の湯は近代以降、教育の場でも独自の位置を占めてきた。学校や地域のサークル、職場の文化活動などで学ばれることで、茶の湯は「家の芸」から「公共の教養」へと性格を広げる。そこで重んじられるのは、正座や所作の訓練にとどまらず、季節の言葉、掛物の読み、器の見立て、客の立場に立つ想像力である。形式が共同体の共通語になればなるほど、茶の湯は多様な人々を迎え入れつつ、同じ一服に向かって注意を揃える方法として働く。
+
+国際化の進展によって、茶の湯は異なる文化的前提を持つ人々に向けて、言葉と所作の両面で説明されるようになった。だからこそ、点前の意味、露地の歩き方、道具の扱いに込められた配慮が、改めて「なぜそうするのか」という問いにさらされる。形式は固定された遺物ではなく、問いに耐えて初めて生きた継承となる。茶の湯が現代においても学ばれ続ける理由は、その問いが一服の現場で、いまここに立ち上がるからである。
+
+さらに、茶の湯は多くの職能の網の目によって支えられている。釜師、陶工、塗師、竹細工、袋師といった道具の作り手だけでなく、菓子屋、庭師、花の担い手、古裂や修理の知識を持つ人々がいて、はじめて一座は成り立つ。現代の継承とは、点前の型を伝えることに加えて、素材（茶・水・炭）と道具を生み出す現場、その手入れと循環を次の世代へ接続することでもある。
